--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="image/team-07.jpg" alt="images">
         <img src="image/team-08.jpg" alt="images">
     </div>
-    <button id='dwon'>Dwon</button>
+    <button id='dwon'>Dwon Scroll</button>
 
     <script src='main.js'></script>
 </body>
